[tool.poetry]
name = "tireless"
version = "0.1.1"
description = "Python web framework built on top of flask to accelerate web development process"
authors = ["Eric_Kweyunga <maverickweyunga@gmail.com>"]
maintainers = ["Eric_Kweyunga <maverickweyunga@gmail.com>"]
readme = "README.md"
packages = [{ include = "tireless" }]
license = "MIT"
keywords = ["tireless", "flask", "package", "web-package", "Eric Kweyunga", "maverickweyunga@gmail.com"]
classifiers = [
    "Programming Language :: Python :: 3"
]


[[tool.poetry.source]]
name = "foo"
url = "https://pypi.example.org/simple"
priority = "supplemental"

[project.urls]
Repository = "https://github.com/eric-creative/tireless"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tireless = "tireless.cli:cli"
